# otus.lessons.30.02

./: .travis.yml  README.md
docker/: Dockerfile  docker.sh
src/: CMakeLists.txt  SDLWindow.h  life_board.h  main.cpp  thread_loop.h
